--- a/KPIKit/www/index.html
+++ b/KPIKit/www/index.html
@@ -16,11 +16,20 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <!--<script src="cordova.js"></script>-->
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
+    <!-- App toast -->
+    <script src="lib/angular/ng-cordova.js"></script>
+    <!--AngularJS-->
+    <script src="lib/angular/angular-resource.js"></script>
+    <!--<script src="lib/angular/angular-route.js"></script>-->
+    <!--jQuery-->
+    <script class="include" type="text/javascript" src="lib/jquery/jquery-1.11.1.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
 
   <body ng-app="starter">
